# gp_portal

./: .env.example  .env.production.example  .gitattributes  .gitignore  README.md  docker-compose.yml  railway.json
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci-runner.yml  ci-storage.yml  deploy-railway.yml
backend/: .coveragerc  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260506_0001_baseline.py  20260507_0002_users.py  20260507_0003_domain.py  20260507_0004_rag_dimensions_revised_date.py  20260507_0005_portfolio_config_inapp.py  20260511_0006_approval_with_comment.py  20260511_0007_health_score_5_components.py  20260511_0008_drop_old_health_weights.py  20260511_0009_delivery_acceptance.py  20260511_0010_risk_p_i_level.py  20260511_0011_actionplan_objective_links.py  20260511_0012_deliverable_type_acceptance_deps_status.py  20260511_0013_pendingitem_impact_created.py  20260511_0014_scope_change_refactor.py  20260512_0015_scope_change_deliverable_code.py  20260512_0016_retrospective_schema.py  20260513_0017_report_prepopulated_flag.py  20260515_0018_users_anonymized_at.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/internal/: agent_results.py  heartbeats.py
backend/app/api/v1/: admin_data_requests.py  approvals.py  auth.py  baselines.py  client_portal.py  events.py  files.py  health.py  me.py  notifications.py  operator.py  portfolio.py  projects.py  reports.py  scope_changes.py
backend/app/core/: config.py  logging.py  security.py  worker_auth.py
backend/app/db/: base.py  seed.py  session.py
backend/app/models/: __init__.py  domain.py  user.py
backend/app/notifications/: sse.py
backend/app/queue/: publisher.py
backend/app/schemas/: approval.py  auth.py  baseline.py  client.py  data_export.py  data_request.py  operator.py  portfolio.py  project.py  proposal_extraction.py  report.py  retrospective.py  scope_change.py  worker.py
backend/app/services/: data_export_service.py  health_score.py  notifications.py  prepopulate.py  report_analyzer_stub.py  worker_stub.py
backend/scripts/: seed_pilot.py  start.sh
backend/tests/: conftest.py  test_auth.py  test_baseline_report.py  test_domain_models.py  test_f4.py  test_f52_diff_baselines.py  test_f52_portfolio_scope_changes.py  test_f52_transition.py  test_f53_close_project.py  test_f54_prepopulate.py  test_health_endpoints.py  test_lgpd_deletion.py  test_lgpd_e2e.py  test_lgpd_export.py  test_migration_0014_scope_change.py  test_operator.py  test_projects.py  test_proposal_extraction_schema.py  test_publisher.py  test_seed_pilot.py  test_settings_cors_guard.py  test_smoke.py  test_worker_callback.py
backend/tests/fixtures/proposals/: README.md  bradesco_sas_databricks.expected.json  bradesco_sas_databricks.txt  diretriz_estrategica.expected.json  diretriz_estrategica.txt  extract.py  torra_governanca.expected.json  torra_governanca.txt
docs/: arquitetura.md  conformidade-v3.1.md  decisoes.md  dev_notes.md  f28-bradesco-baseline-quality.md  fase-0-relatorio.md  fase-1-relatorio.md  fase-2-relatorio.md  fase-3-5-relatorio.md  fase-3-relatorio.md  fase-4-relatorio.md  fase-5-plano.md  fase-5-progresso.md  lgpd.md  pre-deploy-checklist.md  pre-deploy-validation-report.md  rat.md  spec_consolidada_v3.1.md
docs/briefings/: README.md  f57-lgpd.md
docs/prompts/: proposal_reader_v1.md
docs/runbooks/: deploy-railway.md  operacao-piloto.md  setup-worker-wsl.md
docs/spec_history/: v3.0.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/health-check/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: app-shell.tsx  health-gauge.tsx  notification-bell.tsx
frontend/src/lib/: api.ts  auth-context.tsx  format.ts  rag.ts  schemas.ts  types.ts
frontend/tests/: action-plan-shape.test.ts  admin-data-requests.test.tsx  baseline-page.test.tsx  diff-baselines-pmo.test.tsx  diff-baselines.test.tsx  format.test.ts  health-gauge.test.tsx  pending-item-shape.test.ts  pmo-scope-changes.test.tsx  portal-cliente.test.tsx  portfolio-config.test.tsx  projeto-encerramento.test.tsx  rag.test.ts  report-novo-mode.test.tsx  review-pmo.test.tsx  schemas.test.ts  screenshots-f4.spec.ts  screenshots-f52.spec.ts  screenshots-f53.spec.ts  screenshots-f54.spec.ts  screenshots.spec.ts  setup.ts  smoke.test.tsx  use-autosave.test.ts  wizard-badge-prepopulated.test.tsx
frontend/tests/e2e/: flow.spec.ts
jump_agent_runner/: README.md  pyproject.toml
jump_agent_runner/jump_agent_runner/: __init__.py  artifact.py  observer.py  policy.py  prompt.py  protocols.py  runner.py  types.py
jump_agent_runner/jump_agent_runner/broker/: windows_native.py  wsl_tmux.py
jump_agent_runner/jump_agent_runner/cli/: main.py
jump_agent_runner/jump_agent_runner/providers/: _base.py  claude_provider.py  codex_provider.py
jump_agent_runner/jump_agent_runner/routes/: _subprocess.py  broker_route.py  claude_headless.py  codex_headless.py
jump_agent_runner/tests/: conftest.py  test_artifact.py  test_claude_headless.py  test_claude_headless_real.py  test_cli.py  test_codex_headless.py  test_codex_headless_real.py  test_observer.py  test_prompt.py  test_runner_and_providers.py  test_smoke.py  test_types.py  test_wsl_tmux_broker.py  test_wsl_tmux_broker_real.py
jump_storage/: README.md  pyproject.toml
jump_storage/jump_storage/: __init__.py  base.py  factory.py  local.py  r2.py
jump_storage/tests/: test_factory.py  test_local.py  test_r2.py
scripts/: f28_compare_bradesco.py  f28_show_bradesco_output.py  f28_smoke_bradesco.py
shared/schemas/: report_insights.json
worker/: .coveragerc  .env.example  Dockerfile  pyproject.toml
worker/scripts/: setup-windows.ps1  start-worker.ps1
worker/tests/: conftest.py  test_http_client.py  test_main.py  test_units.py
worker/worker/: config.py  heartbeat.py  hmac_signer.py  http_client.py  main.py  prompt_builder.py
(+26 files in other folders)
