[project]
name = "jump-report-backend"
version = "0.1.0"
description = "Backend FastAPI para o Sistema de Report da Jump Label"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.13.3",
    "asyncpg==0.30.0",
    "pydantic[email]>=2.9,<3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt<4",
    "redis==5.2.0",
    "httpx==0.27.2",
    "python-multipart==0.0.17",
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    "tenacity==9.0.0",
    "structlog==24.4.0",
    "sentry-sdk==2.18.0",
    "boto3==1.35.63",
    "resend>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.0",
    "mypy==1.13.0",
    "types-python-jose==3.3.4.20240106",
    "types-passlib==1.7.7.20240819",
    "aiosqlite==0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC"]
# B008: Depends/Body/Query default args são idiomáticos no FastAPI
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N806"]  # Session = async_sessionmaker(...) é classe

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires database/redis running",
    "slow: long-running",
]
