[project]
name = "jump-report-worker"
version = "0.1.0"
description = "Processo worker que roda na máquina Windows da Jump — consome jobs Redis e executa via jump-agent-runner"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "redis==5.2.0",
    "httpx==0.27.2",
    "pydantic>=2.9,<3",
    "pydantic-settings==2.6.1",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "boto3==1.35.63",
    "jump-agent-runner",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.0",
    "mypy==1.13.0",
    "fakeredis>=2.26,<3",
]

[project.scripts]
jump-worker = "worker.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]

[tool.uv.sources]
jump-agent-runner = { path = "../jump_agent_runner", editable = true }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
